tests/transpiler/x/zig/pure_global_fold.error
run: exit status 1
/workspace/mochi/tests/transpiler/x/zig/pure_global_fold.zig:5:16: error: use of undeclared identifier 'k'
    return x + k;
               ^
/workspace/mochi/tests/transpiler/x/zig/pure_global_fold.zig:9:11: error: unused local constant
    const k = 2;
          ^
/workspace/mochi/tests/transpiler/x/zig/pure_global_fold.zig:10:15: error: root source file struct 'Io' has no member named 'getStdOut'
    try std.io.getStdOut().writer().print("{any}\n", .{inc(3)});
        ~~~~~~^~~~~~~~~~
/tmp/zig/lib/std/Io.zig:1:1: note: struct declared here
const std = @import("std.zig");
^~~~~
referenced by:
    callMain [inlined]: /tmp/zig/lib/std/start.zig:668:22
    callMainWithArgs [inlined]: /tmp/zig/lib/std/start.zig:637:20
    posixCallMainAndExit: /tmp/zig/lib/std/start.zig:592:36
    2 reference(s) hidden; use '-freference-trace=5' to see all references
