tests/transpiler/x/zig/pure_global_fold.zig
// Generated by Mochi Zig transpiler on 2025-07-21 11:24 +0000
const std = @import("std");

fn inc(x: i64) i64 {
    return x + k;
}

pub fn main() void {
    const k = 2;
    try std.io.getStdOut().writer().print("{any}\n", .{inc(3)});
}
